--- a/impressiveUploader/docker-compose.yml
+++ b/impressiveUploader/docker-compose.yml
@@ -3,9 +3,8 @@ version: '3'
 services:
   web:
     build: .
-    command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
-    container_name: impressiveUploader
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/2
+      - .:/code
     ports:
       - "8000:8000"
