--- a/impressiveUploader/dockerfile
+++ b/impressiveUploader/dockerfile
@@ -1,8 +1,7 @@
-FROM python:3.7.3-alpine
+FROM python:3
 ENV PYTHONUNBUFFERED 1
-RUN mkdir /impressiveUploader
-WORKDIR /impressiveUploader
-ADD requirements.txt /impressiveUploader/
+RUN mkdir /code
+WORKDIR /code
+COPY requirements.txt /code/
 RUN pip install -r requirements.txt
-ADD ./ /impressiveUploader/
-CMD ["python", "mysite/manage.py", "runserver", "0.0.0.0:8001"]
+COPY . /code/
